# ThermalPrinter

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
src/: __init__.py  main.py  parser.py  style.css
src/sudoku_module/: generator.py
src/weather_module/: __init__.py  generator.py
tests/: test_main.py
